<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_listmode"
        android:orderInCategory="10"
        android:showAsAction="always"
        android:title="@string/text_listmode">
    </item>
    <item
        android:id="@+id/menu_mapmode"
        android:orderInCategory="20"
        android:showAsAction="always"
        android:title="@string/text_mapmode">
    </item>
    <item
        android:id="@+id/menu_cameramode"
        android:orderInCategory="30"
        android:showAsAction="always"
        android:title="@string/text_cameramode">
    </item>
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/menu_settings"/>
    <item
        android:id="@+id/menu_exit"
        android:orderInCategory="1000"
        android:showAsAction="ifRoom"
        android:title="@string/text_exit"/>

</menu>